assets/css/style.scss
---
---

@import 'jekyll-theme-cayman';

.page-header {
	background-image: url('https://l0lock.github.io/FFmpeg-bat-collection/assets/img/banner.jpg'), url('https://l0lock.github.io/FFmpeg-bat-collection/assets/img/tile.jpg');
	background-size: cover, 200px;
    background-repeat: no-repeat, repeat;
    background-position: center top, left top;


}

.project-name, .project-tagline {
    text-shadow: 0px 0px 60px #159957;
}

.btn {
	box-shadow: 0 0 30px #159957;
	background-color: rgba(0, 0, 0, 0.5);
	color: rgb(255, 255, 255);
}

.btn:hover {
    color: rgba(255, 255, 255, 0.8);
    background-color: rgba(66, 66, 66, 0.6);
}

.table-of-contents {
    background-color: rgba(21, 153, 87, 0.1);
    width: 30em;
    font-size: 0.8em;
    padding: 1em 2em;
    left: 0;
    position: fixed;
    display: block;
    z-index: 2;
    border: 2px solid rgba(0, 0, 0, 0.4);
    border-left: none;
    border-radius: 10px;
    border-top-left-radius: 0px;
    border-bottom-left-radius: 0px;
}

main h4 a:target {
	animation: highlight 1s ease;
}

@keyframes highlight {
	from { color: #990000; font-weight: bold; }
	to { color: #159957; font-weight: normal; }
}

